fix scrollBarOnHover rssFeed Windows

--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -28,6 +28,7 @@ body {
         width: 100%;
         height: 100%;
         overflow-y: auto;
+        position: relative;
       }
     }
   }
